# techcase

./: .env.example  .gitignore  AGENTS.md  AI_POLICY.md  PRODUCT.md  README.md  package.json  pnpm-lock.yaml
apps/backend/: .env.example  README.md  alembic.ini  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 202605160001_create_initial_tables.py  202605160002_add_unchanged_count_to_crawl_runs.py  202605160003_create_article_summaries.py  202605160004_add_content_type_to_article_summaries.py  202605160005_add_source_collection_strategy.py
apps/backend/app/: config.py  main.py
apps/backend/app/crawler/: rss.py  sitemap.py
apps/backend/app/db/: base.py  session.py
apps/backend/app/jobs/: __init__.py  scheduled_ingest.py
apps/backend/app/keywords/: __init__.py  dictionaries.py  extractor.py
apps/backend/app/models/: __init__.py  article.py  article_keyword.py  article_summary.py  crawl_run.py  source.py
apps/backend/app/routers/: search.py  suggest.py
apps/backend/app/search/: ambiguous_query_audit.py  client.py  documents.py  indexer.py  indexes.py  query_alias_audit.py  service.py  suggestion_audit.py  suggestions.py
apps/backend/app/search/evaluation/: __init__.py  audit.py  evaluator.py  keyword_pool.json  keyword_probe.py  queries.json
apps/backend/app/seeds/: aws_sources.py  seed_sources.py
apps/backend/app/summaries/: __init__.py  generator.py
apps/backend/app/summaries/prompts/: case_summary_v1.md
docs/: architecture.md  aws-infra.md  data-model.md  development-log.md  development.md  devloop-runner.md  (+13 more)
(+19 files in other folders)
