[project]
name = "techcase-backend"
version = "0.1.0"
description = "FastAPI backend and crawler for TechCase"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.3",
    "beautifulsoup4>=4.12.3",
    "elasticsearch>=8.15.1",
    "fastapi>=0.115.0",
    "feedparser>=6.0.11",
    "httpx>=0.27.2",
    "psycopg[binary]>=3.2.3",
    "pydantic-settings>=2.5.2",
    "readability-lxml>=0.8.1",
    "sqlalchemy>=2.0.35",
    "uvicorn[standard]>=0.30.6"
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "ruff>=0.6.8"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

